Add forms, migrations, and template updates

--- a/message/templates/index.html
+++ b/message/templates/index.html
@@ -5,5 +5,5 @@ Tweet
 {% endblock %}
 
 {% block content %}
-<h1 class='text-white text-center mt-4'>Welcome to Project</h1>
+<h1 class='text-center mt-4'>Welcome to Project</h1>
 {% endblock %}
